# image

generate_images/: generate_images.py
python/: pyproject.toml
svg/: image.html
